build: use static builds, do not download docker
Signed-off-by: Luca Di Maio <luca.dimaio1@gmail.com>

--- a/hack/provider/provider.yaml
+++ b/hack/provider/provider.yaml
@@ -11,6 +11,8 @@ options:
 agent:
   containerInactivityTimeout: ${INACTIVITY_TIMEOUT}
   local: true
+  docker:
+    install: false
   binaries:
     DOCKERLESS_PROVIDER:
       - os: linux
